tests/baselines/reference/moduleAugmentationExtendAmbientModule2.errors.txt
main.ts(2,1): error TS18056: Declaration file contains hand-written file reference directives: "observable.d.ts"


==== main.ts (1 errors) ====
    /// <reference path="observable.d.ts"/>
    import { Observable } from "observable"
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "observable.d.ts"
    import "./map";
    
    let x: Observable<number>;
    let y = x.map(x => x + 1);
    let z1 = Observable.someValue.toFixed();
    let z2 = Observable.someAnotherValue.toLowerCase();
==== map.ts (0 errors) ====
    import { Observable } from "observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "observable" {
        interface Observable<T> {
            map<U>(proj: (e:T) => U): Observable<U>
        }
        namespace Observable {
            let someAnotherValue: string;
        }
    }
    
==== observable.d.ts (0 errors) ====
    declare module "observable" {
        class Observable<T> {
            filter(pred: (e:T) => boolean): Observable<T>;
        }
        namespace Observable {
            export let someValue: number;
        }
    }
    